deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin
  namespace: ash4d-origin
spec:
  selector:
    app: origin
  ports:
    - port: 80
      targetPort: 8080
